# AgenticBusinessLawResearcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
legacy_tests/: create_workflow_visualization.py  debug_crag_data.py  mermaid_to_png.py  simple_test_fix.py  test_complete_hybrid_integration.py  test_env_check.py  test_final.py  test_fix_validation.py  test_free_models.py  test_hybrid_corrected.py  test_hybrid_system.py  test_langfuse_simple.py  test_langfuse_status.py  test_lexml.py  test_models.py  test_observability_fix.py  test_openrouter.py  test_openrouter_debug.py  test_openrouter_final.py  test_openrouter_fix.py  test_openrouter_free_models.py  test_openrouter_juridico.py  test_openrouter_pydantic.py  test_openrouter_pydantic_base.py  test_quick_integration.py  test_real_system.py  test_real_system_streaming.py  test_sistema_openrouter.py  test_streaming_system.py  test_structlog_fix.py  test_synthesizer_integration.py  test_system.py  update_workflow_png.py
src/: __init__.py
src/agents/: __init__.py  document_grader.py  document_retriever.py  query_transformer.py  search_coordinator.py
src/agents/streaming/: __init__.py  hybrid_legal_processor.py  response_synthesizer.py
src/core/: __init__.py  legal_models.py  llm_factory.py  observability.py  workflow_builder.py  workflow_state.py
src/interfaces/: external_search_client.py
src/utils/: document_processor.py
